--- a/package.json
+++ b/package.json
@@ -4,18 +4,28 @@
   "proxy": "http://localhost:7000",
   "private": true,
   "dependencies": {
+    "@tailwindcss/cli": "^4.0.17",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "adv": "^0.1.5",
     "ajv": "^8.17.1",
     "axios": "^1.8.3",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "firebase": "^11.5.0",
+    "framer-motion": "^12.6.2",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
+    "tailwind-variants": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
